# docker-course-backend

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.db_scripts/: create_tables.sql
migration/: env.py
migration/versions/: 6d593d7cba11_users.py  a207c37da0ce_initial.py
src/: .env  main.py  start.sh
src/project/api/: albums_router.py  artists_router.py  auth_router.py  depends.py  genres_router.py  host_program_router.py  hosts_router.py  playlist_track_router.py  playlists_router.py  program_router.py  song_requests_router.py  tracks_router.py  user_router.py
src/project/core/: config.py  exceptions.py
src/project/infrastructure/postgres/: database.py  models.py
src/project/infrastructure/postgres/repository/: album_repo.py  artists_repo.py  genres_router.py  host_program_repo.py  hosts_repo.py  playlist_repo.py  playlist_track_repo.py  program_repo.py  song_request_repo.py  track_repo.py  user_repo.py
src/project/schemas/: models.py  user.py
